# elk

./: .buckconfig  .gitignore  LICENSE  README.md  elk.bzl  flake.nix  pyproject.toml  test.sh
.github/workflows/: integration.yml
example/: .buckconfig  .gitattributes  .gitignore  BUCK  README.md  alias.bzl  elk.bzl  elk.toml  other.py  platform.bzl  pyproject.toml  venv.sh
example/custom_platforms/: BUCK  main.py  pyproject.toml
example/poetry/: BUCK  linux-x86_64.tags.json  main.py  pyproject.toml
example/pypi/: BUCK  elk.toml  linux-x86_64.tags  platform.bzl  pyproject.toml
example/toolchains/: BUCK
example/uv/: BUCK  linux-x86_64.tags.json  pyproject.toml
example/uv_workspace/: BUCK  pyproject.toml  workspace.bzl
src/poetry_plugin_elk/: buck.py  config.py  envs.py  exporter.py  plugin.py  walker.py
toolchains/toolchains/: BUCK
tools/: BUCK  pyproject.toml  save_tags.py
